[gd_scene load_steps=11 format=2]

[ext_resource path="res://buttons/Untitled (3).png" type="Texture" id=1]
[ext_resource path="res://buttons/Untitled (7).png" type="Texture" id=2]
[ext_resource path="res://other/Cool Text - Mega Water Runner         64 413720515533318.png" type="Texture" id=3]
[ext_resource path="res://buttons/Untitled (6).png" type="Texture" id=4]
[ext_resource path="res://buttons/Untitled (8).png" type="Texture" id=5]
[ext_resource path="res://buttons/Untitled (4).png" type="Texture" id=6]
[ext_resource path="res://buttons/Untitled (5).png" type="Texture" id=7]
[ext_resource path="res://other/backgroubd.png" type="Texture" id=8]
[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=9]
[ext_resource path="res://Scenes/fakewater.tscn" type="PackedScene" id=10]

[node name="TitleScreen" type="Node"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.668518, 0.668519 )
texture = ExtResource( 8 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 169.0
margin_top = 52.0
margin_right = 1111.0
margin_bottom = 669.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 942.0
margin_bottom = 277.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 471.0
margin_top = 293.0
margin_right = 471.0
margin_bottom = 293.0
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 321.0
margin_top = 309.0
margin_right = 621.0
margin_bottom = 617.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 100.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 300.0
margin_bottom = 204.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 2 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 300.0
margin_bottom = 308.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="Water" parent="." instance=ExtResource( 10 )]
position = Vector2( -293, 600 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
